# tabular

./: .gitignore  .gitmodules  README.md  benchmark.py  data_generation.py  matrix_generating.ipynb
mcpfn/: .gitignore  README.md  config.pkl  pyproject.toml  test_bar_distribution_shape.py  tests.ipynb  train.md  utils.py
mcpfn/benchmark/: README.md  analyze_imputation_times.py  auc_table.tex  cacti_wrapper.py  calculate_imputation_variance.py  create_openml_categorical_missingness_datasets.py  create_openml_missingness_datasets.py  create_uci_missingness.py  dataset_sizes.txt  dataset_sizes_missing.txt  datasets_df.csv  diffputer_wrapper.py  download_openml.py  download_uci_datasets.py  generate_dataset_table.py  get_openml_categorical_errors.py  get_openml_errors.py  get_uci_errors.py  main.py  notmiwae_wrapper.py  plot_accuracy.py  plot_critical_difference.py  plot_error_boxplots.py  plot_error_violinplots.py  plot_mcar_line.py  plot_negative_mae.py  plot_negative_rmse.py  plot_options.py  plot_pairwise_by_pattern.py  plot_r_squared.py  plot_ranks.py  plot_uci_negative_rmse.py  plot_wasserstein.py  plot_win_rate.py  remasker_wrapper.py
mcpfn/benchmark/categorical/: get_openml_categorical_errors.py  openml_categorical_class_counts.py  plot_accuracy.py
mcpfn/benchmark/datasets/: .gitignore
mcpfn/benchmark/datasets/openml/analcatdata_gviolence/: MAR_0.4_mean.npy  MAR_0.4_missing.npy  MAR_0.4_std.npy  MAR_0.4_true.npy  MCAR_0.4_std.npy  (+7 more)
mcpfn/benchmark/runs/NotMIWAE_20260115-165934/: events.out.tfevents.1768514374.spark-6b71.2025866.0
mcpfn/benchmark/runs/NotMIWAE_20260115-165955/: events.out.tfevents.1768514395.spark-6b71.2026019.0
mcpfn/benchmark/runs/NotMIWAE_20260115-170022/: events.out.tfevents.1768514422.spark-6b71.2026272.0
mcpfn/benchmark/runs/NotMIWAE_20260115-170139/: events.out.tfevents.1768514499.spark-6b71.2026589.0
mcpfn/benchmark/runs/NotMIWAE_20260115-170230/: events.out.tfevents.1768514550.spark-6b71.2026836.0
mcpfn/benchmark/runs/NotMIWAE_20260115-171012/: events.out.tfevents.1768515012.spark-6b71.2028345.0
mcpfn/benchmark/runtime_benchmark/: README.md  get_runtime_models.py  plot_runtime_benchmark.py  runtime_benchmark_results.csv
mcpfn/runs/NotMIWAE_20260115-155554/: events.out.tfevents.1768510554.spark-6b71.2016604.0
mcpfn/runs/NotMIWAE_20260115-165110/: events.out.tfevents.1768513870.spark-6b71.2024082.0
mcpfn/runs/NotMIWAE_20260115-165200/: events.out.tfevents.1768513920.spark-6b71.2024082.1
mcpfn/runs/NotMIWAE_20260115-165343/: events.out.tfevents.1768514023.spark-6b71.2024082.2
mcpfn/scripts/: gen_multiple.sh  generate_data.sh  train.sh  train_mar.sh  train_mcar.sh  train_mcar_nonlinear.sh  train_mnar.sh  train_stage1.sh
mcpfn/src/mcpfn/: __init__.py  interface.py  utils.py
mcpfn/src/mcpfn/diffusion/: mar_diffusion_row10_30_col10_30_mar0_3_marblock0_3_marbandit0_4_epoch100_bs32_samples30k_lr1e_3.py
mcpfn/src/mcpfn/model/: bar_distribution.py  config.py  full_attention.py  interface.py  layer.py  layers.py  learning.py  mcpfn.py  memory.py  mlp.py  tabicl.py  transformer.py
mcpfn/src/mcpfn/prior/: base_prior.py  dataset.py  genload.py  mar_block_missing.py  prior_config.py  scm_prior.py  training_set_generation.py  utils.py
mcpfn/src/mcpfn/sklearn/: classifier.py
mcpfn/src/mcpfn/train/: run.py  train_config.py
mcpfn/src/tabimpute/: __init__.py  categorical_adapter_interface.py  interface.py  prepreocess.py  sweep.py  sweep_stable.py  tabimpute_v2.py  tabpfn_extensions_interface.py  train.py  train_new.py  train_new_stable.py  train_new_sweep.py  utils.py
mcpfn/src/tabimpute/data/: borders.pt  encoder.pth
mcpfn/src/tabimpute/diffusion/: __init__.py  mar_diffusion_row10_30_col10_30_mar0_3_marblock0_3_marbandit0_4_epoch100_bs32_samples30k_lr1e_3.py
mcpfn/src/tabimpute/misc/: _sklearn_compat.py
mcpfn/src/tabimpute/model/: bar_distribution.py  config.py  encoders.py  full_attention.py  inference.py  layer.py  mcpfn.py  memory.py  model.py  model_new.py  model_new_stable.py  model_new_stable_followups.md  positional.py  transformer.py
mcpfn/src/tabimpute/postprocessing/: __init__.py  bounds.py
mcpfn/src/tabimpute/prior/: base_prior.py  dataset.py  genload.py  hp_sampling.py  mar_block_missing.py  mar_missing.py  mar_onesided_missing.py  mar_sequential_missing.py  mlp_scm.py  scm_prior.py  splits.py  training_set_generation.py  utils.py
mcpfn/src/tabimpute/sklearn/: preprocessing.py
mcpfn/src/tabimpute/train/: callbacks.py  optim.py  run.py  train_config.py
(+567 files in other folders)
